DISEÑO Y APLICACION DE HOJAS DE ESTILO

--- a/html/index.html
+++ b/html/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <div id="contenedor">
-        <div id="encabezado">
-
+        <div id="cabecera">
+            <h1 class="Encabezado">NAVIDAD 2022</h1>
         </div>
         <div id="menu">
-
+            <h1>Menu</h1>
         </div>
-        <div id="contenido">
-            <section id="navidad"></section>
-            <section id="nacimiento"></section>
+        <div id="seccion1">
+            <section></section>
+        </div>
+        <div id="seccion2">
+            <section></section>
         </div>
         <div id="pie">
-            
+
         </div>
     </div>
 </body>
