--- a/html/index.html
+++ b/html/index.html
@@ -10,19 +10,73 @@
 <body>
     <div id="contenedor">
         <div id="cabecera">
-            <h1 class="Encabezado">NAVIDAD 2022</h1>
+            <img src="/img/imagenHearder.jpeg" alt="">
+            <h1 class="encabezado">NAVIDAD 2022</h1>
         </div>
         <div id="menu">
-            <h1>Menu</h1>
+            <nav class="barraNavegacion">
+                <ul>
+                    <li> <a href="#">Navidad 2022</a> </li>
+                    <li> <a href="#">Costumbres</a> </li>
+                    <li> <a href="#">Lugar a visitar</a></li>
+                    <li> <a href="#">Regalos</a></li>
+                </ul>
+            </nav>
         </div>
         <div id="seccion1">
-            <section></section>
+            <div id="seccion1_section">
+                <h1 class="encabezado">NAVIDAD</h1>
+                <p class="texto">Aunque la Navidad es actualmente época de regalos, de
+                    celebraciones y reuniones familiares, lo cierto es que su
+                    origen responde en realidad a otros factores históricos que
+                    involucran al poderoso Imperio Romano, a ritos paganos y
+                    poco tienen que ver con el hecho histórico que
+                    conmemoran: el nacimiento del niño Jesús.
+                    Todos sabemos que el 25 de diciembre se conmemora el
+                    nacimiento de Jesús de Nazaret, pero la verdad es que se
+                    desconoce la fecha exacta de este hecho histórico. El
+                    análisis de ciertos fragmentos de los evangelios, así como
+                    de otros documentos de aquella época, han permitido a los
+                    historiadores realizar diferentes hipótesis sobre el
+                    nacimiento de Jesucristo. Algunos hablan de abril o mayo,
+                    mientras que otros concluyen que fue en Septiembre u 
+                    Octubre.
+                </p>
+            </div>
+            <div id="seccion1_aside">
+                <img src="/img/imagenSeccion1_01.jpeg" alt="">
+                <img src="/img/imagenSeccion1_02.jpeg" alt="">
+            </div>     
         </div>
         <div id="seccion2">
-            <section></section>
+            <div id="seccion2_section">
+                <section>
+                    <img src="/img/imagenSeccio2_1.jpeg" alt="">
+                    <img src="/img/imagenSeccio2_2.jpeg" alt="">
+                </section>
+            </div>
+            
+            <div id="seccion2_aside">
+                <aside>
+                    <h1 class="encabezado">NACIMIENTO DE JESUS DE NAZARET</h1>
+                    <p class="texto">
+                        Hace más de dos mil años una mujer de la ciudad de
+                        Nazaret llamada María fue visitada por un ángel llamado
+                        Gabriel quien le dijo a esta mujer judía que daría a luz a un
+                        hijo y que le pondría de nombre Jesús pues sería el hijo de
+                        Dios. María era virgen y estaba por contraer matrimonio con
+                        un hombre llamado José. Al ver que María estaba
+                        embarazada José confundido y algo dolido quiso dejarla en
+                        secreto para que nadie fuera a lastimarla, pero el ángel
+                        Gabriel vino a José y le contó exactamente lo que María ya 
+                        le había dicho a José, que este bebé es hijo de Dios que será
+                        llamado Jesús y que salvara a su gente de todo pecado.   
+                    </p>
+                </aside>
+            </div>        
         </div>
         <div id="pie">
-
+            <h1 class="pieNavegacion">CARLOS ALBERTO GARCIA MEDRANO @ NAVIDAD 2022</h1>
         </div>
     </div>
 </body>
